  * Fix the cmake paths in llvm-3.9-dev deb package. Thanks to Brad King
    for the patch (Closes: #819072)
  * LLVMConfig.cmake is now installed to <prefix>/lib/cmake/llvm instead of
    <prefix>/share/llvm/cmake
    Thanks to Brad King of the fix
  * Disable lldb on sparc64 (Closes: #832371)
  * Generate manpages for lli, lldb-mi & git-clang-format
  * Fix some lintian overrides

 -- Sylvestre Ledru <sylvestre@debian.org>  Mon, 25 Jul 2016 12:18:52 +0200

llvm-toolchain-3.9 (1:3.9~svn275918-1~exp1) experimental; urgency=medium

  * New snapshot release
  * Silent test CodeGen/SPARC/LeonInsertNOPsDoublePrecision.ll
  * Bring back llvm-3.9-tools to life
  * ship clang-tblgen & yaml-bench as part of the libclang-common-X.Y-dev
    package
  * ship lli-child-target as part of the llvm-X.Y-runtime package

 -- Sylvestre Ledru <sylvestre@debian.org>  Tue, 19 Jul 2016 15:34:08 +0200

llvm-toolchain-snapshot (1:3.9~svn274438-1) unstable; urgency=medium

  * Remove the autoconf section
  * Bring back the removal of the build dir
  * Fix the coverage builds (didn't allow several cflags)
  * Set the correct conflicts on python-lldb-3.8 (Closes: #817873)
  * Set the correct conflicts on python-clang-3.8 (Closes: #817872)
  * remove llvm26003-sanitizer-check-env.diff (merged upstream)
  * Do not fail the build if the manpages cannot be built (failing on
    Ubuntu precise)
  * Install libfindAllSymbols.a as part of libclang-X.Y-dev
  * Ship scan-build-py
  * Use the libjsoncpp library embedded (fails to link otherwise)
  * Standards-Version 3.9.8
  * cmake files moved from usr/lib/llvm-3.9/share/llvm/cmake/
    to usr/lib/llvm-3.9/lib/cmake/llvm/
    (upstream change)
  * Add a symlink from usr/lib/llvm-3.9/share/llvm/cmake
    pointing to usr/share/llvm-3.9/cmake
  * Disable the run of lldb testsuite because of LLVM_LINK_LLVM_DYLIB=ON:
    https://llvm.org/bugs/show_bug.cgi?id=28127
  * Add -gsplit-dwarf to CXXFLAGS to workaround the memory allocation
    issue on i386