@@ -6,4 +6,4 @@ debian/man/llvm-objdump-@LLVM_VERSION@.1
 debian/man/llvm-rtdyld-@LLVM_VERSION@.1
 debian/man/llvm-size-@LLVM_VERSION@.1
 debian/man/llvm-ranlib-@LLVM_VERSION@.1
-
+build-llvm/docs/man/bugpoint-@LLVM_VERSION@.1
